[package]
name = "lute-src-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "make_prebuilt","testcrate"]

[dependencies]
cc = "1"
lute-src-rs-common = { git = "https://github.com/mluau/lute-src-rs-common" }
git2 = { version = "0.20", optional = true }

[features]
default = []
prebuilt = ["dep:git2"]
